<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Trips</string>

    <string name="title_section1">Tracks</string>
    <string name="title_section2">Map</string>
    <string name="title_section3">GeTS</string>
    <string name="title_section4">About</string>
    <string name="title_section5">Settings</string>
    <string name="title_section6">Help</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_file_chooser">Choose File</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="delete_track_server">From server</string>
    <string name="delete_track_local">Local</string>
    <string name="delete_track">Delete track</string>
    <string name="track"   >Track:   </string>
    <string name="category">Category:</string>
    <string-array name="track_spinner_array">
        <item>All</item>
        <item>Private</item>
        <item>Public</item>
        <item>Local</item>
        <item>Active</item>
    </string-array>

    <plurals name="pref_seek_bar_summary">
        <item quantity="one">Points range is %d meter</item>
        <item quantity="other">Points range is %d meters</item>
    </plurals>
    <plurals name="pref_load_radius_summary">
        <item quantity="one">Load points nearer than %d meter</item>
        <item quantity="other">Load points nearer than %d meters</item>
    </plurals>

    <string name="title_activity_help">HelpActivity</string>

    <!-- Preferences strings -->
    <string name = "gets_not_logged">Not logged in</string>
    <string name = "gets_logged">Logged in</string>
    <string name = "loggin_button">Login</string>
    <string name = "logout_button">Logout</string>
    <string name = "gets_autho">GeTS Authorization</string>

    <string name = "setloadrad">Load radius</string>
    <string name = "setpointrange">Point range</string>

    <string name = "about_string">This application is a part of grant KA332 of Karelia ENPI CBC programme, which is co-funded by the European Union, the Russian Federation and the Republic of Finland. \n\nVersion: 1.0 </string>

    <!-- Help -->

    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="refresh1">Press to refresh list of tracks or points</string>
    <string name="filter1">Use "Filter" to show tracks or points from selected categories</string>

    <string name="tracks1">Press "Add" button to create track</string>
    <string name="tracks">Tracks</string>
    <string name="refresh2">Refresh track list</string>

    <string name="activate">Activate</string>
    <string name="save">Save</string>
    <string name="activate1">Show track on map hiding unrelated points</string>
    <string name="save1">Save content of track to your device</string>

    <string name="delete">Delete</string>
    <string name="delete1">Delete track. Application will ask you delete track locally or on remote server</string>
    <string name="modes">Modes</string>
    <string name="modes1">Map has two modes: single track and all tracks</string>
    <string name="stm">Single track mode</string>
    <string name="stm1">In single track mode map shows only active track.</string>
    <string name="atm">All tracks mode</string>
    <string name="atm1">Show all loaded points and tracks</string>

    <string name="search">Search</string>
    <string name="search1">Search near points. Searching radius can be adjusted in settings window</string>
    <string name="place">Place here</string>
    <string name="place1">Set position to current map center</string>

    <string name="addpoint">Add point</string>
    <string name="addpoint1">Create new point</string>

    <string name="pointmenu">Point menu</string>
    <string name="pointmenu1">Long press point to access point menu</string>
    <string name="att">Add to track</string>
    <string name="att1">Add point to track</string>

    <string name="edit">Edit</string>
    <string name="edit1">Edit point description, image and audio</string>

    <string name = "publish">Published tracks can be made private again with "Unpublish" button.</string>
    <string name = "unpublish">Remove track from public access</string>

    <string name = "drag">Move</string>
    <string name = "drag1">Use Move button to start relocating point</string>
    <string name = "publish_track">Publish</string>
    <string name = "unpublish_track">Unpublish</string>


    <string name = "record_track">Record visited points</string>
    <string name = "delete_point">Delete point</string>


    <!-- Dialogs -->
    <string name = "selectcat">Select category</string>
    <string name = "namehint">Name</string>
    <string name = "deschint">Description</string>
    <string name = "urlhint">URL</string>
    <string name = "addnewtrack">Add new track</string>
    <string name = "editing_position">Editing point position</string>
    <string name = "insert_point_title">Adding point to track</string>
    <string name = "welcommes">Welcome to My Trips</string>
    <string name = "jumpto">Jumps to your location</string>
    <string name = "dontshowagain"> Dont show this dialog again</string>
    <string name = "pd_no_track">No track</string>

    <string name = "follow">Follow</string>
    <string name = "unfollow">Unfollow</string>

    <string name = "is_trusted_user">Trusted user</string>

    <!-- Toasts -->
    <string name = "point_not_editable">Point is not editable</string>
    <string name = "position_not_set">Location is not set yet</string>
    <string name = "no_tracks_to_show">No tracks to activate</string>
    <string name = "searching_points">Searching for near points</string>


</resources>
