<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add"
          android:icon="@drawable/ic_action_new"
          android:title="@string/addpoint"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/search"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_place"
          android:icon="@drawable/ic_action_accept"
          android:title="@string/place"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_find_me"
          android:icon="@drawable/ic_action_location_found"
          android:title="@string/activate"
          app:showAsAction="always" />

    <item android:id="@+id/action_stop_guide"
          android:icon="@drawable/ic_routing"
          android:title="@string/modes"
          app:showAsAction="always" />
</menu>